--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -43,6 +43,17 @@ mybatis:
   configuration:
     map-underscore-to-camel-case: true
 
+artoria:
+  event:
+    enabled: true
+    destination: event_record
+    trace: true
+    show-trace-record: true
+    send-trace-record: true
+  exception:
+    enabled: true
+  user:
+    enabled: false
 
 
 
